# naturalcc

examples/uicopilot/: .gitignore  pyproject.toml  setup.py
examples/uicopilot/.github/: README.md
examples/uicopilot/scripts/train/: my_dataset.py  preprocess.py  train.py  utils.py
examples/uicopilot/src/uicopilot/: simple_inference.py  utils.py
examples/uicopilot/src/uicopilot/agents/: __init__.py  agents.py
examples/uicopilot/src/uicopilot/agents/utils/: claude.py  gemini.py  gpt4o.py
examples/uicopilot/tools/: additional_info.py  data_stat.py  gpt4v.py  human_judge.py
